# rsqs

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: main.rs  menu.rs  qrcode.rs  selection.rs  selection_logic.rs
