[package]
name = "rsqs"
version = "0.1.0"
edition = "2024"

[dependencies]
xcap = "0.6.1"
fs_extra = "1.3.0"

view = "0.4.1"
image = "0.25.6"
rfd = "0.15.3"
minifb = "0.28.0"
anyhow = "1.0.98"
clipboard = "0.5.0"
base64 = "0.22.1"

druid = { git = "https://github.com/linebender/druid.git", features=["image", "png"]}