[package]
name = "rsqs"
version = "0.1.0"
edition = "2024"
authors = ["tayasui_rainnya <ecr.lime.hello@gmail.com>"]
description = "A lightweight screenshot tool"

[dependencies]
xcap = "0.6.1"
fs_extra = "1.3.0"

view = "0.4.1"
image = "0.24.9"
rfd = "0.15.3"
minifb = "0.28.0"
anyhow = "1.0.98"
clipboard = "0.5.0"
arboard = "3.5.0"
bardecoder = "0.5.0"


druid = { git = "https://github.com/linebender/druid.git", features=["image", "png"]}

